Update presentation with suggestion

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<div>
 							<ul>
                 <li>We do not have the estimation until the company send the information to review</li>
-                <li>We can not predict what wold be the CAMELS value of a company in the next period</li>
+                <li>We can not predict what would be the CAMELS value of a company in the next period</li>
 
 							</ul>
 						</div>
@@ -360,9 +360,9 @@
 Model & Random  & Neural  & SVM & Logist \\
 &Forest & Networks & & Regression\\
 \hline
-\text{Chart of account (CA)} +  & \bf{72\%} & 69.3\% & 70.1\% & 65.5\% \\
+\text{Chart of account (CA)}   & \bf{72\%} & 69.3\% & 70.1\% & 65.5\% \\
 \text{Descriptive variables (DV)} & & & & \\ 
-\text{CA + DV} +  & \bf{70.95\%} & 68.3\% & 68.2\% & 63.5\%\\
+\text{CA + DV}   & \bf{70.95\%} & 68.3\% & 68.2\% & 63.5\%\\
 \text{Variation between periods (VBP)}  & & & & \\
 \text{CA + DV + VBP} + & \bf{76.66\%} & 75.5\% & 74.5\% & 70.3\%\\
 \text{CAMELS/RISK + MI}   & & & & \\
